<resources>
    <string name="app_name">TicketUnion</string>
    <string name="nav_home">首页</string>
    <string name="nav_selected">精选</string>
    <string name="nav_red_packet">特惠</string>
    <string name="nav_search">搜索</string>
    <string name="et_search_hint">请输入想搜的宝贝</string>
    <string name="tv_logo_title">领卷联盟</string>
    <string name="net_error_and_retry">网络错误，请点击重试...</string>
    <string name="format_goods_title">%s</string>
    <string name="format_goods_off_prise">省%1$d元</string>
    <string name="format_goods_after_prise">%1$.02f</string>
    <string name="format_goods_cur_prise">￥%1$s</string>
    <string name="format_goods_sell_count">%1$d人已购买</string>
    <string name="format_home_pager_title_part">%1$s</string>
    <string name="tv_tao_kou_ling">淘口令</string>
    <string name="recommend_title">精选推荐</string>
    <string name="format_recommend_category">%1$s</string>
    <string name="format_recommend_category_content">%1$s</string>
    <string name="format_recommend_content_pre_price">原价: %1$s元</string>
    <string name="format_recommend_category_off_info">%1$s</string>
    <string name="red_packet_title" >特惠宝贝</string>
    <string name="format_red_packet_content">%1$s</string>
    <string name="format_red_packet_pre_price">￥%1$s</string>
    <string name="format_red_packet_off_price">券后价: %1$.02f元</string>
    <string name="format_red_packet_off_info" >%1$s</string>
    <string name="search_title">搜索</string>
    <string name="search_cancel">取消</string>
</resources>
