<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:gravity="center_vertical"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/iv_item_goods_cover"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@mipmap/wifi"/>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_item_goods_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/format_goods_title"
            android:maxLines="2"/>

        <TextView
            android:id="@+id/tv_item_goods_off_prise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_tag_bg"
            android:layout_marginTop="8dp"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:text="@string/format_goods_off_prise"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:text="券后价："/>

            <TextView
                android:id="@+id/tv_item_goods_after_prise"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:text="@string/format_goods_after_prise"/>

            <TextView
                android:id="@+id/tv_item_goods_cur_prise"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_gravity="center_vertical"
                android:textSize="10sp"
                android:textColor="@color/colorGray"
                android:text="@string/format_goods_cur_prise"/>

            <TextView
                android:id="@+id/tv_item_goods_sell_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorGray"
                android:text="@string/format_goods_sell_count" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>