<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="4dp"
    app:contentPadding="5dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_red_packet_content"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:src="@mipmap/ic_launcher"/>

            <TextView
                android:id="@+id/tv_red_packet_off_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginTop="10dp"
                android:background="@drawable/shape_tag_bg"
                android:text="@string/format_red_packet_off_info"
                android:textSize="14sp"
                android:textColor="@color/white"/>
        </RelativeLayout>

        <TextView
            android:id="@+id/tv_red_packet_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/format_red_packet_content"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_red_packet_content_pre_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorTMail"
                android:textSize="12sp"
                android:text="@string/format_red_packet_pre_price"/>

            <TextView
                android:id="@+id/tv_red_packet_content_off_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:textSize="14sp"
                android:textColor="@color/colorPrimary"
                android:text="@string/format_red_packet_off_price"/>
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>